--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,9 @@ axum = { version = "0.7.5", features = ["macros"] }
 sqlx = { version = "0.7.3", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
 tokio = { version = "1.37.0", features = ["full"] }
 
+[[bin]]
+name = "app"
+path = "src/bin/app.rs"
+
 [dev-dependencies]
 rstest = "0.18.2"
